--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -18,9 +18,11 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      // "@/components/*": ["app/components/*"],  // Alias for components
+      // "@/lib/utils/*": ["app/lib/utils/*"],    // Alias for utils
+      "@/*": ["./*"]                           // Alias for everything else
     },
-    "baseUrl": "."
+    "baseUrl": "."  // Ensure the base URL is set correctly for module resolution
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
